--- a/politica/index.html
+++ b/politica/index.html
@@ -1,11 +1,79 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
-    <title>Política de Seguridad</title>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Política de Seguridad - Chatbot BasketFlow Baloncesto Venezolano</title>
+    <style>
+        body {
+            font-family: sans-serif;
+            line-height: 1.6;
+            margin: 20px;
+        }
+        h1, h2 {
+            color: #333;
+        }
+        p {
+            margin-bottom: 15px;
+        }
+    </style>
 </head>
 <body>
-    <h1>Política de Seguridad de Mi App</h1>
-    <p>Aquí va el texto de tu política de privacidad y seguridad...</p>
+    <h1>Política de Seguridad para Chatbot BasketFlow de Información sobre Baloncesto Venezolano</h1>
+
+    <section>
+        <h2>1. Introducción</h2>
+        <p>Esta política de seguridad describe las medidas que tomamos para proteger la información que recopila y utiliza nuestro chatbot informativo sobre baloncesto venezolano. Nos comprometemos a mantener la seguridad y privacidad de los datos de nuestros usuarios y a cumplir con las leyes de protección de datos aplicables.</p>
+    </section>
+
+    <section>
+        <h2>2. Recopilación de datos</h2>
+        <p>Nuestro chatbot recopila principalmente información pública sobre el baloncesto venezolano, como estadísticas de jugadores, resultados de partidos y noticias de equipos. En algunos casos, podemos recopilar información proporcionada por los usuarios, como sus preferencias de equipos o jugadores. No recopilamos datos personales sensibles, como información financiera o de salud.</p>
+    </section>
+
+    <section>
+        <h2>3. Uso de datos</h2>
+        <p>Utilizamos los datos recopilados para proporcionar información precisa y actualizada sobre el baloncesto venezolano a nuestros usuarios. Podemos utilizar los datos para personalizar la experiencia del usuario, como mostrarle noticias de sus equipos favoritos. No compartimos los datos de los usuarios con terceros, excepto cuando sea necesario para cumplir con la ley.</p>
+    </section>
+
+    <section>
+        <h2>4. Seguridad de los datos</h2>
+        <p>Implementamos medidas de seguridad técnicas y organizativas para proteger los datos de los usuarios contra accesos no autorizados, pérdidas o alteraciones. Utilizamos cifrado para proteger la comunicación entre el chatbot y los usuarios. Realizamos copias de seguridad periódicas de los datos para garantizar su disponibilidad.</p>
+    </section>
+
+    <section>
+        <h2>5. Privacidad del usuario</h2>
+        <p>Informamos a los usuarios sobre cómo recopilamos y utilizamos sus datos a través de esta política de seguridad. Permitimos a los usuarios controlar sus datos y ejercer sus derechos de privacidad. No recopilamos datos de menores de edad sin el consentimiento de sus padres o tutores.</p>
+    </section>
+
+    <section>
+        <h2>6. Cambios en la política de seguridad</h2>
+        <p>Podemos actualizar esta política de seguridad periódicamente para reflejar cambios en nuestras prácticas de seguridad. Notificaremos a los usuarios sobre cualquier cambio importante en la política de seguridad.</p>
+    </section>
+
+    <section>
+        <h2>7. Contacto</h2>
+        <p>Si tienes alguna pregunta o inquietud sobre nuestra política de seguridad, puedes contactarnos a través de [dirección de correo electrónico o formulario de contacto].</p>
+    </section>
+
+    <section>
+      <h2>Medidas de seguridad específicas para un chatbot informativo</h2>
+        <ul>
+          <li><strong>Validación de fuentes de información:</strong> Asegúrate de que el chatbot solo utilice fuentes de información confiables y verificadas.</li>
+          <li><strong>Monitoreo de la precisión de la información:</strong> Monitorea las respuestas del chatbot para asegurarte de que sean precisas y estén actualizadas.</li>
+          <li><strong>Protección contra la manipulación de respuestas:</strong> Implementa medidas para evitar que terceros manipulen las respuestas del chatbot y difundan información falsa.</li>
+          <li><strong>Transparencia sobre las fuentes de información:</strong> Informa a los usuarios sobre las fuentes de información que utiliza el chatbot.</li>
+          <li><strong>Mecanismo de retroalimentación:</strong> Implementa un mecanismo para que los usuarios puedan informar sobre errores o información incorrecta.</li>
+        </ul>
+    </section>
+    <section>
+        <h2>Recomendaciones adicionales</h2>
+        <ul>
+          <li>Realiza auditorías de seguridad periódicas para evaluar la eficacia de tus medidas de seguridad.</li>
+          <li>Capacita a tu personal en seguridad de chatbots y privacidad de datos.</li>
+          <li>Mantente actualizado sobre las últimas amenazas y mejores prácticas de seguridad.</li>
+        </ul>
+    </section>
+
 </body>
 </html>
