--- a/politica/index.html
+++ b/politica/index.html
@@ -53,26 +53,7 @@
 
     <section>
         <h2>7. Contacto</h2>
-        <p>Si tienes alguna pregunta o inquietud sobre nuestra política de seguridad, puedes contactarnos a través de [dirección de correo electrónico o formulario de contacto].</p>
-    </section>
-
-    <section>
-      <h2>Medidas de seguridad específicas para un chatbot informativo</h2>
-        <ul>
-          <li><strong>Validación de fuentes de información:</strong> Asegúrate de que el chatbot solo utilice fuentes de información confiables y verificadas.</li>
-          <li><strong>Monitoreo de la precisión de la información:</strong> Monitorea las respuestas del chatbot para asegurarte de que sean precisas y estén actualizadas.</li>
-          <li><strong>Protección contra la manipulación de respuestas:</strong> Implementa medidas para evitar que terceros manipulen las respuestas del chatbot y difundan información falsa.</li>
-          <li><strong>Transparencia sobre las fuentes de información:</strong> Informa a los usuarios sobre las fuentes de información que utiliza el chatbot.</li>
-          <li><strong>Mecanismo de retroalimentación:</strong> Implementa un mecanismo para que los usuarios puedan informar sobre errores o información incorrecta.</li>
-        </ul>
-    </section>
-    <section>
-        <h2>Recomendaciones adicionales</h2>
-        <ul>
-          <li>Realiza auditorías de seguridad periódicas para evaluar la eficacia de tus medidas de seguridad.</li>
-          <li>Capacita a tu personal en seguridad de chatbots y privacidad de datos.</li>
-          <li>Mantente actualizado sobre las últimas amenazas y mejores prácticas de seguridad.</li>
-        </ul>
+        <p>Si tienes alguna pregunta o inquietud sobre nuestra política de seguridad, puedes contactarnos a través de maurolondon@pylogical.com.</p>
     </section>
 
 </body>
